BUILD: add --enable-preview to test and java targets